fixed symptom checker display - select list options were too long oops!

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
   --main-spacing: 15px;
 } */
 
-/* * {
+* {
   box-sizing: border-box;
-} */
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, Helvetica,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,9 +17,9 @@ body {
 
 /******************************* Map  */
 
-.map {
+/* .map {
   overflow: hidden;
-}
+} */
 
 #racoon-logo{
   margin: auto;
@@ -74,6 +74,9 @@ body {
   margin: 1%;
   position: fixed;
   background: white;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -82,7 +85,6 @@ body {
   margin: 1%;
   text-decoration: none;
 }
-
 
 input {
   padding: 12px;
@@ -95,8 +97,14 @@ input {
 form {
   display: flex;
   flex-direction: column;
-  margin: 15%;
-  top: 0px;
+  flex-wrap: wrap;
+  margin: auto;
+  width: 100%;
+}
+
+p, label {
+  width: 100%;
+  margin: auto;
 }
 
 .comment-input {
@@ -155,13 +163,13 @@ button:hover, input[type=submit]:hover {
 
 /******************************* Responsive layout */
 
-/* @media screen and (max-width: 600px) {
-  .column {
+@media screen and (max-width: 600px) {
+  .page {
     width: 100%;
   }
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
